add support for the 10.10 SDK (DP1) get rid of bc dependency

--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -41,6 +41,7 @@ SRCS= \
  programs/osxcross-version.cpp \
  programs/osxcross-env.cpp \
  programs/osxcross-conf.cpp \
+ programs/osxcross-cmp.cpp \
  programs/sw_vers.cpp
 
 OBJS=$(subst .cpp,.o,$(SRCS))
