--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -43,8 +43,7 @@ SRCS= \
  programs/osxcross-conf.cpp \
  programs/osxcross-cmp.cpp \
  programs/sw_vers.cpp \
- programs/pkg-config.cpp \
- programs/dsymutil.cpp
+ programs/pkg-config.cpp
 
 OBJS=$(subst .cpp,.o,$(SRCS))
 
