add 'osxcross-man' - man page tool

--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -44,6 +44,7 @@ SRCS= \
  programs/osxcross-env.cpp \
  programs/osxcross-conf.cpp \
  programs/osxcross-cmp.cpp \
+ programs/osxcross-man.cpp \
  programs/sw_vers.cpp \
  programs/pkg-config.cpp \
  programs/xcrun.cpp
