--- a/wrapper/wrapper.project
+++ b/wrapper/wrapper.project
@@ -36,6 +36,7 @@
       <File Name="programs/osxcross-conf.cpp"/>
       <File Name="programs/osxcross-cmp.cpp"/>
       <File Name="programs/xcrun.cpp"/>
+      <File Name="programs/osxcross-man.cpp"/>
     </VirtualDirectory>
     <File Name="Makefile"/>
     <File Name="build.sh"/>
