Add llvm-dsymutil build script + re-add 7e9f85
This finally makes proper debugging possible

--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -57,7 +57,8 @@ SRCS= \
  programs/osxcross-man.cpp \
  programs/sw_vers.cpp \
  programs/pkg-config.cpp \
- programs/xcrun.cpp
+ programs/xcrun.cpp \
+ programs/dsymutil.cpp
 
 OBJS=$(subst .cpp,.o,$(SRCS))
 
