* Update cctools to 927.0.2 and ld64 to 450.3 * Added back support for OpenBSD * Some cleanup and various fixes

--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -2,14 +2,14 @@ PLATFORM ?= $(shell uname -s)
 OPTIMIZE ?= 2
 LTO ?= 0
 
-OSXCROSS_VERSION ?= unknown
-OSXCROSS_TARGET ?= darwin12
-OSXCROSS_OSX_VERSION_MIN ?= 10.5
-OSXCROSS_LINKER_VERSION ?= 134.9
-OSXCROSS_LIBLTO_PATH ?=
-OSXCROSS_CXXFLAGS ?= 
+VERSION ?= unknown
+TARGET ?= darwin12
+OSX_VERSION_MIN ?= 10.5
+LINKER_VERSION ?= 134.9
+LIBLTO_PATH ?=
+ADDITIONAL_CXXFLAGS ?=
 
-override CXXFLAGS=-std=c++0x -Wall -Wextra -pedantic
+override CXXFLAGS=-std=c++1y -Wall -Wextra -pedantic
 override CXXFLAGS+=-Wno-missing-field-initializers
 override CXXFLAGS+=-I. -O$(OPTIMIZE) -g
 
@@ -17,14 +17,14 @@ ifeq ($(LTO), 1)
   override CXXFLAGS+=-flto
 endif
 
-override CXXFLAGS+=-DOSXCROSS_VERSION="\"$(OSXCROSS_VERSION)\""
-override CXXFLAGS+=-DOSXCROSS_TARGET="\"$(OSXCROSS_TARGET)\""
-override CXXFLAGS+=-DOSXCROSS_OSX_VERSION_MIN="\"$(OSXCROSS_OSX_VERSION_MIN)\""
-override CXXFLAGS+=-DOSXCROSS_LINKER_VERSION="\"$(OSXCROSS_LINKER_VERSION)\""
-override CXXFLAGS+=-DOSXCROSS_LIBLTO_PATH="\"$(OSXCROSS_LIBLTO_PATH)\""
-override CXXFLAGS+=-DOSXCROSS_BUILD_DIR="\"$(OSXCROSS_BUILD_DIR)\""
+override CXXFLAGS+=-DOSXCROSS_VERSION="\"$(VERSION)\""
+override CXXFLAGS+=-DOSXCROSS_TARGET="\"$(TARGET)\""
+override CXXFLAGS+=-DOSXCROSS_OSX_VERSION_MIN="\"$(OSX_VERSION_MIN)\""
+override CXXFLAGS+=-DOSXCROSS_LINKER_VERSION="\"$(LINKER_VERSION)\""
+override CXXFLAGS+=-DOSXCROSS_LIBLTO_PATH="\"$(LIBLTO_PATH)\""
+override CXXFLAGS+=-DOSXCROSS_BUILD_DIR="\"$(BUILD_DIR)\""
 
-override CXXFLAGS+= $(OSXCROSS_CXXFLAGS)
+override CXXFLAGS+= $(ADDITIONAL_CXXFLAGS)
 
 ifneq (,$(findstring FreeBSD, $(PLATFORM)))
   override LDFLAGS+=-lutil
