* Add xcodebuild stub tool. Only '-version' is supported. * build_compiler_rt.sh: Change git repository. The llvm.org one is no longer synced. * build_compiler_rt.sh: Add check for os/lock.h. * xcrun: "Support" -show-sdk-platform-path. * sw_vers: Output 0CFFFF for Build Version.

--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -62,6 +62,7 @@ SRCS= \
  programs/sw_vers.cpp \
  programs/pkg-config.cpp \
  programs/xcrun.cpp \
+ programs/xcodebuild.cpp \
  programs/dsymutil.cpp
 
 OBJS=$(subst .cpp,.o,$(SRCS))
